tests/baselines/reference/assignmentCompatWithObjectMembersOptionality.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts(73,5): error TS2322: Type 'D' is not assignable to type 'C'.
  Property 'opt' is optional in type 'D' but required in type 'C'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts(74,5): error TS2322: Type 'E' is not assignable to type 'C'.
  Property 'opt' is optional in type 'E' but required in type 'C'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts(78,5): error TS2322: Type 'D' is not assignable to type '{ opt: Base; }'.
  Property 'opt' is optional in type 'D' but required in type '{ opt: Base; }'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts(79,5): error TS2322: Type 'E' is not assignable to type '{ opt: Base; }'.
  Property 'opt' is optional in type 'E' but required in type '{ opt: Base; }'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts(83,5): error TS2322: Type 'D' is not assignable to type '{ opt: Base; }'.
  Property 'opt' is optional in type 'D' but required in type '{ opt: Base; }'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts(84,5): error TS2322: Type 'E' is not assignable to type '{ opt: Base; }'.
  Property 'opt' is optional in type 'E' but required in type '{ opt: Base; }'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts (6 errors) ====
    // Derived member is not optional but base member is, should be ok
    
    class Base { foo: string; }
    class Derived extends Base { bar: string; }
    class Derived2 extends Derived { baz: string; }
    
    module TargetHasOptional {
        // targets
        interface C {
            opt?: Base
        }
        var c: C;
    
        var a: { opt?: Base; }
        var b: typeof a = { opt: new Base() }
    
        // sources
        interface D {
            opt: Base;
        }
        interface E {
            opt: Derived;
        }
        interface F {
            opt?: Derived;
        }
        var d: D;
        var e: E;
        var f: F;
    
        // all ok
        c = d;
        c = e;
        c = f;
        c = a;
    
        a = d;
        a = e;
        a = f;
        a = c;
    
        b = d;
        b = e;
        b = f;
        b = a;
        b = c;
    }
    
    module SourceHasOptional {
        // targets
        interface C {
            opt: Base
        }
        var c: C;
    
        var a: { opt: Base; }
        var b = { opt: new Base() }
    
        // sources
        interface D {
            opt?: Base;
        }
        interface E {
            opt?: Derived;
        }
        interface F {
            opt: Derived;
        }
        var d: D;
        var e: E;
        var f: F;
    
        c = d; // error
        ~
!!! error TS2322: Type '{|D|0|}' is not assignable to type '{|C|1|}'.
!!! error TS2322:   Property 'opt' is optional in type 'D' but required in type 'C'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:60:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:51:15
        c = e; // error
        ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|C|1|}'.
!!! error TS2322:   Property 'opt' is optional in type 'E' but required in type 'C'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:63:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:51:15
        c = f; // ok
        c = a; // ok
    
        a = d; // error
        ~
!!! error TS2322: Type '{|D|0|}' is not assignable to type '{ {|opt|1|}: {|Base|2|}; }'.
!!! error TS2322:   Property 'opt' is optional in type 'D' but required in type '{ opt: Base; }'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:60:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:56:14
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:3:7
        a = e; // error
        ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{ {|opt|1|}: {|Base|2|}; }'.
!!! error TS2322:   Property 'opt' is optional in type 'E' but required in type '{ opt: Base; }'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:63:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:56:14
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:3:7
        a = f; // ok
        a = c; // ok
    
        b = d; // error
        ~
!!! error TS2322: Type '{|D|0|}' is not assignable to type '{ {|opt|1|}: {|Base|2|}; }'.
!!! error TS2322:   Property 'opt' is optional in type 'D' but required in type '{ opt: Base; }'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:60:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:57:15
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:3:7
        b = e; // error
        ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{ {|opt|1|}: {|Base|2|}; }'.
!!! error TS2322:   Property 'opt' is optional in type 'E' but required in type '{ opt: Base; }'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:63:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:57:15
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersOptionality.ts:3:7
        b = f; // ok
        b = a; // ok
        b = c; // ok
    }